v1.2.0: fixed WndOptionsCondensed to work again